New in master
=============

Bugfixes
--------

* Don’t warn if post status is set to ``published`` explicitly
  (Issue #3181)
* Remove mention of Twitter cards requiring an opt-in.
  This is not true anymore - anyone can use them.
* fancydates now workwith listdate items (eg. archives)

Features
--------

* Support for docutils.conf (Issue #3188)

New in v8.0.1
=============

* Not compatible with Markdown 3.x yet, this release pins the
  requirement down to 2.x (until we get 3.x support done)

Features
--------

* Make URL displayed by ``nikola auto`` and ``nikola serve`` clickable
  (Issue #3166)

Bugfixes
--------

* Pandoc compiler was passing deleted argument (Issue #3171)
* Make ``nikola version --check`` work again (Issue #3170)
* Set logging level for reST to warning in order to limit noise
* Fix docinfo removal for sites that use reST docinfo metadata
  (Issue #3167)

New in v8.0.0
=============

Important compatibility changes
-------------------------------

* Rename ``crumbs.tmpl`` to ``ui_helper.tmpl`` and the breadcrumbs
  ``bar`` function to ``breadcrumbs`` (your templates may need
  changing as well)
* Rename ``post.is_mathjax`` to ``post.has_math``. Themes using
  ``post.is_mathjax`` must be updated; it is recommended that they are
  changed to use ``math_helper.tmpl``.
* Reading reST docinfo metadata, including first heading as title,
  requires ``USE_REST_DOCINFO_METADATA`` now (Issue #2987)
* RSS feeds might have changed their places due to ``RSS_PATH``
  behavior changes (you may need to change ``RSS_PATH``,
  ``RSS_FILENAME_BASE``)
* Atom feeds for archives and Atom pagination are no longer supported
  (Issue #3016)
* Sections are replaced by categories (Issue #2833)
* You need ``<a class="reference">`` (instead of ``image-reference``)
  to activate the lightbox now
* Date formatting now uses the Babel library, you might need to
  change ``BABEL_FORMAT`` (Issues #2606, 3121)
* The first heading in a reST document is not removed anymore by