@@ -4,6 +4,7 @@ New in master
 Bugfixes
 --------
 
+* Set one-file status basing on default language only (Issue #3191)
 * Don’t warn if post status is set to ``published`` explicitly
   (Issue #3181)
 * Remove mention of Twitter cards requiring an opt-in.
